; ModuleID = '/home/carl/AnghaBench/kphp-kdb/drinkless/extr_dl-utils-lite.c_dl_print_backtrace.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/drinkless/extr_dl-utils-lite.c_dl_print_backtrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"\0A------- Stack Backtrace -------\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"-------------------------------\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dl_print_backtrace() #0 {
  %1 = alloca [64 x i8*], align 16
  %2 = alloca i32, align 4
  %3 = getelementptr inbounds [64 x i8*], [64 x i8*]* %1, i64 0, i64 0
  %4 = call i32 @backtrace(i8** %3, i32 64)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %7 = getelementptr inbounds [64 x i8*], [64 x i8*]* %1, i64 0, i64 0
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @backtrace_symbols_fd(i8** %7, i32 %8, i32 2)
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @backtrace(i8**, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @backtrace_symbols_fd(i8**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
